@@ -37,6 +37,7 @@ class Screen:
     # Width of tree columns per model
     # It is shared with all connection but it is the price for speed.
     tree_column_width = collections.defaultdict(lambda: {})
+    tree_column_optional = {}
 
     def __init__(self, model_name, **attributes):
         context = attributes.get('context', {})
